syntax = "proto3";
package decimal.coin.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "bitbucket.org/decimalteam/go-smart-node/x/coin/types";

message LegacyBalance {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = true;

  string legacyAddress = 1 [
    (gogoproto.jsontag) = "legacy_address",
    (gogoproto.moretags) = "yaml:\"legacy_address\""
  ];

  repeated cosmos.base.v1beta1.Coin coins = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "coins",
    (gogoproto.moretags) = "yaml:\"coins\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}
