syntax = "proto3";
package decimal.validator.v1;


import "gogoproto/gogo.proto";
import "decimal/validator/v1/validator.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "bitbucket.org/decimalteam/go-smart-node/x/validator/types";

service Msg {
  rpc DeclareCandidate(MsgDeclareCandidate) returns (MsgDeclareCandidateResponse);
  rpc Delegate(MsgDelegate) returns (MsgDelegateResponse);
  rpc DelegateNFT(MsgDelegateNFT) returns (MsgDelegateNFTResponse);
  rpc SetOnline(MsgSetOnline) returns (MsgSetOnlineResponse);
  rpc SetOffline(MsgSetOffline) returns (MsgSetOfflineResponse);
  rpc Unbond(MsgUnbond) returns (MsgUnbondResponse);
  rpc UnbondNFT(MsgUnbondNFT) returns (MsgUnbondNFTResponse);
  rpc EditCandidate(MsgEditCandidate) returns (MsgEditCandidateResponse);
}

message MsgDeclareCandidate {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  bytes commission = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"commission\""
  ];

  string validator_addr = 2 [(gogoproto.moretags) = "yaml:\"validator_addr\""];

  string reward_addr = 3 [(gogoproto.moretags) = "yaml:\"reward_addr\""];

  bytes stake = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"stake\""
  ];

  Description description = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"description\""
  ];
  google.protobuf.Any pub_key = 6 [
    (cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey",
    (gogoproto.moretags) = "yaml:\"pub_key\""
  ];
}

message MsgDeclareCandidateResponse {}

message MsgDelegate {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string delegator_address = 1 [
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];
  string validator_address = 2 [
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];
  string coin = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"coin\""
  ];
}

message MsgDelegateResponse {}

message MsgDelegateNFT {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string delegator_address = 1 [
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];
  string validator_address = 2 [
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];
  string token_id = 3 [
    (gogoproto.moretags) = "yaml:\"token_id\""
  ];
  string denom = 4 [
    (gogoproto.moretags) = "yaml:\"denom\""
  ];
  bytes quantity = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"quantity\""
  ];
}

message MsgDelegateNFTResponse {}

message MsgSetOnline {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string validator_address = 1 [
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];
}

message MsgSetOnlineResponse {}

message MsgSetOffline {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string validator_address = 2 [
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];
}

message MsgSetOfflineResponse {}

message MsgUnbond {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string validator_address = 1 [
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];
  string delegator_address = 2 [
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];
  string coin = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"coin\""
  ];
}

message MsgUnbondResponse {}

message MsgUnbondNFT {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string validator_address = 1 [
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];
  string delegator_address = 2 [
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];
  string token_id = 3 [
    (gogoproto.moretags) = "yaml:\"token_id\""
  ];
  string denom = 4 [
    (gogoproto.moretags) = "yaml:\"denom\""
  ];
  bytes quantity = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"quantity\""
  ];
}

message MsgUnbondNFTResponse {}

message MsgEditCandidate {
  string validator_address = 1 [
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];
  string reward_address = 2 [
    (gogoproto.moretags) = "yaml:\"reward_address\""
  ];
  Description description = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"description\""
  ];
}

message MsgEditCandidateResponse {}